tests/js_error/source_locations/destructure/array/iterator_close_non_empty.exp
Error: 
  ┌ tests/js_error/source_locations/destructure/array/iterator_close_non_empty.js:8:15
  |
8 |         throw new Error();
  |               ^
Stack trace:
  at get return (tests/js_error/source_locations/destructure/array/iterator_close_non_empty.js:8:15)
  at <global> (tests/js_error/source_locations/destructure/array/iterator_close_non_empty.js:14:5)